css/main.css
/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */


/* Variables */

h1,
h2,
h3,
h4,
h5 {
    font-family: 'Bree Serif', Arial, sans-serif;
}

:root {
    --color-primary-dark: #333;
    --color-primary-light: #FFF;
}

/* Styles */

body {
  color: var(--color-primary-dark);
  font-family: 'Roboto', 'Arial', sans-serif
}

main {
    overflow: hidden;
    margin: 0;
    padding: 20px 15vw;
    background-color: var(--color-primary-light);
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0 15vw;
    overflow: hidden;
    background-color: var(--color-primary-light);
    border-bottom: var(--color-primary-dark) solid 1px;
}

li  {
    float: left;
}

a {
    cursor: pointer;
}

.nav-item {
    display: block;
    color: var(--color-primary-dark);
    text-align: center;
    padding: 14px 16px;

    font-family: 'Bree Serif', Arial, sans-serif;
    font-size: 30px;
    text-decoration: none;
}

.nav-item:hover {
    background-color: var(--color-primary-dark);
    color: var(--color-primary-light)
}

.social {
    float: right;
}

.social-img {
    height: 30px;
    width: auto;
    margin: 0 10px;
}

article {
    width: 60%;
}

footer {
    position: fixed;
    bottom: 0;
    width: 70vw;
    margin: 0;
    padding: 1vh 15vw;
    overflow: hidden;

    border-top: var(--color-primary-dark) 1px solid;
    font-family: 'Bree Serif', Arial, sans-serif;
    font-size: 20px;
    color: var(--color-primary-dark);
    background-color: var(--color-primary-light);
}

table {
    border-spacing: 0;
}

td {
    border-top: var(--color-primary-dark) 1px solid;
    padding: 30px;
    vertical-align: top;
    margin: none;
}

.x-col {
    width: 140px;
}

.gallery-wrapper {
    display: flex;
    flex-direction: row;
}

.gallery {
    width: 60%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.gallery-object {
    text-align-last: center;
    padding: 10px;
    margin: 10px;
    border: var(--color-primary-dark) 1px solid;
}

.gallery-object > img{
    height: 150px;
    width: 150px;
}

.gallery-object > p {
    margin-bottom: 0;
}

aside {
    width: 40%;
    margin: 10px;
    border: var(--color-primary-dark) 1px solid;
}

aside > img {
    width: 100%;
    height: auto;
    background-color: black;
}



/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster */
        -webkit-box-shadow: none !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

